Fix shadow overlap issue and move inline styles to CSS

--- a/app/javascript/react/screens/App/common/ListViewTable/ListViewTable.scss
+++ b/app/javascript/react/screens/App/common/ListViewTable/ListViewTable.scss
@@ -101,20 +101,34 @@
     }
   }
 
-  tr.list-group-item-container-row {
+  tr.list-group-expanded-container-row {
     border: $expanded-border;
 
     td.list-group-item-container {
       width: auto;
       margin: auto;
       position: static;
-      box-shadow: 0 2px 6px rgba(3, 3, 3, 0.2);
       clip-path: inset(0px -6px -6px -6px);
 
-      .close {
-        position: static;
-        right: 0;
+      > div.expanded-content-flex-container {
+        display: flex;
+        justify-content: space-between;
+
+        > div.expanded-content-children {
+          flex-grow: 1;
+        }
+
+        > .close {
+          position: static;
+          right: 0;
+        }
       }
+    }
+
+    + tr:not(.list-view-pf-expand-active) {
+      // this box-shadow is visually equivalent to normal list view's box-shadow on the .list-group-item-container,
+      // but that shadow was overlapping the next expanded row incorrectly.
+      box-shadow: inset 0 8px 6px -6px rgba(3, 3, 3, 0.2);
     }
   }
 }
